--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">  
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">  
+  <title>Simon George Ltd</title>
+</head>
+<body class="text-white bg-dark">
+
+  <!-- <div class="wrapper" style="background-image: url('pexels-vlad-chețan-2892619.jpg')"> -->
+    <div class="container text-center d-flex flex-column h-100">
+
+      <header class="mb-auto"></header>
+
+      <main class="px-3">
+        <h1>
+          Simon George
+          <small class="text-muted">Ltd</small>
+        </h1>
+        <p class="lead">
+          Providing software consultancy services to public and private sector clients.
+        </p>
+        <p class="lead">
+          <a class="btn bg-white fab fa-linkedin fa-lg" href="https://uk.linkedin.com/in/simegeorge"></a>
+          <a class="btn bg-white fas fa-envelope fa-lg" href="mailto:simon@simongeorge.ltd"></a>
+        </p>
+      </main>
+
+      <footer class="mt-auto"></footer>
+
+    </div>
+  <!-- </div> -->
+    
+</body>
+</html>
